--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/react": "^19.0.2",
     "@types/react-dom": "^19.0.2",
     "@types/webpack": "^5.28.5",
+    "@types/webpack-bundle-analyzer": "^4.7.0",
     "@types/webpack-dev-server": "^4.7.1",
     "css-loader": "^7.1.2",
     "html-webpack-plugin": "^5.6.3",
@@ -33,6 +34,7 @@
   "dependencies": {
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "react-router-dom": "^7.1.1"
+    "react-router-dom": "^7.1.1",
+    "webpack-bundle-analyzer": "^4.10.2"
   }
 }
