--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "build:prod": "webpack --env mode=production",
     "start": "webpack serve --env mode=development",
     "build:desktop": "webpack serve --env mode=development --env platform=platform",
-    "build:mobile": "webpack serve --env mode=development --env platform=mobile"
-
+    "build:mobile": "webpack serve --env mode=development --env platform=mobile",
+    "typecheck": "tsc"
   },
   "keywords": [],
   "author": "",
