--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "license": "ISC",
   "description": "",
   "devDependencies": {
+    "@pmmmwh/react-refresh-webpack-plugin": "^0.5.15",
     "@types/node": "^22.10.2",
     "@types/react": "^19.0.2",
     "@types/react-dom": "^19.0.2",
@@ -35,8 +36,10 @@
     "webpack-dev-server": "^5.2.0"
   },
   "dependencies": {
+    "fork-ts-checker-webpack-plugin": "^9.0.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-refresh-typescript": "^2.0.10",
     "react-router-dom": "^7.1.1",
     "webpack-bundle-analyzer": "^4.10.2"
   }
